# rfcpp

./: CMakeLists.txt  LICENSE  base64.h  readme.md  rfc2045.h  rfc2047.h
examples/: test.cpp
rfcpp/: rfc2045.cpp  rfc2047.cpp  rfc4648.h
